Update smaller image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar2.jpg" alt="" /></span>
+							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Rajesh Kanna</h1>
 							<p>Software Product Visionary | Hacker | Tech Evangelist</p>
 						</header>
