--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<ul class="icons">
 								<li><a href="https://github.com/vrajeshkanna" class="fa-github">Github</a></li>
 								<li><a href="https://www.linkedin.com/in/rajesh-kanna-bb339a23/" class="fa-linkedin">Linkedin</a></li>
-								<li><a href="https://play.google.com/store/apps/developer?id=v.rajeshkanna" class="fa-android">Play Store</a></li>
+								<li><a href="https://play.google.com/store/apps/developer?id=Navir+Labs" class="fa-android">Play Store</a></li>
 								<li><a href="https://expo.io/@vrajeshkanna" class="fa-apple">iOS Apps</a></li>
 								<li><a href="https://api.whatsapp.com/send?phone=919894179312" class="fa-whatsapp">Whatsapp</a></li>
 								<li><a href="https://twitter.com/vrajeshkanna1" class="fa-twitter">Twitter</a></li>
