--- a/resume.html
+++ b/resume.html
@@ -295,7 +295,7 @@
                         </div>
                         <div class="info-tag-container"> <i class="fa fa-envelope-o"></i>
 
-                             <h6 class="info-text">v.rajeshkanna@gmail.com</h6>
+                             <h6 class="info-text">rajesh@kanna.in</h6>
 
                         </div>
                         <div class="info-tag-container"> <i class="fa fa-mobile"></i>
