Page break issue while printing

--- a/resume.html
+++ b/resume.html
@@ -234,9 +234,12 @@
                 .page .resume-content {
                   padding: 0 22px 0 34px; }
               .container {
-                page-break-inside: avoid; }
+                page-break-inside: auto; }
               .work-container .item {
                 page-break-inside: avoid; }
+              .interests-container{
+                page-break-inside: avoid;
+              }
               .fa-external-link {
                 display: none; } }
             
