Updated app store link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Rajesh Kanna</h1>
-							<p>Software Product Visionary | Hacker | Tech Evangelist</p>
+							<p>Software Product Visionary | Maker | Tech Evangelist</p>
 						</header>
 						<!--
 						<hr />
@@ -66,7 +66,7 @@
 								<li><a href="https://github.com/vrajeshkanna" class="fa-github">Github</a></li>
 								<li><a href="https://www.linkedin.com/in/rajesh-kanna-bb339a23/" class="fa-linkedin">Linkedin</a></li>
 								<li><a href="https://play.google.com/store/apps/developer?id=Navir+Labs" class="fa-android">Play Store</a></li>
-								<li><a href="https://expo.io/@vrajeshkanna" class="fa-apple">iOS Apps</a></li>
+								<li><a href="https://itunes.apple.com/us/developer/rajesh-kanna/id1457034088" class="fa-apple">iOS Apps</a></li>
 								<li><a href="https://api.whatsapp.com/send?phone=919894179312" class="fa-whatsapp">Whatsapp</a></li>
 								<li><a href="https://twitter.com/vrajeshkanna1" class="fa-twitter">Twitter</a></li>
 								<li><a href="https://www.instagram.com/v.rajeshkanna/" class="fa-instagram">Instagram</a></li>
