Updated gravatar image

--- a/resume.html
+++ b/resume.html
@@ -285,7 +285,7 @@
 
                 </div>
                 <div class="profile-pic pull-right">
-                    <img src="https://en.gravatar.com/userimage/24487792/c630e7a174d037a0348143ad09f11c7a.jpg?size&#x3D;200" alt="profile-pic"/>
+                    <img src="https://www.gravatar.com/avatar/0cb00053c497c00e4a3ca2c5cf1e11e6" alt="profile-pic"/>
                 </div>
             </header>
             <div class="resume-content">
