:lipstic: Update hi res avatar image and its style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="avatar"><img src="images/avatar.jpg" alt="Rajesh Kanna" style="height: 225px;
+								width: 175px;" /></span>
 							<h1>Rajesh Kanna</h1>
 							<p>Software Product Visionary | Maker | Tech Evangelist</p>
 						</header>
