--- a/resume.html
+++ b/resume.html
@@ -343,9 +343,6 @@
                                 </div>
                                 <ul class="minimal">
                                     <li>
-                                        <h6>Java/J2EE based Enterprise Applications</h6>
-                                    </li>
-                                    <li>
                                         <h6>Agile/Scrum Methodologies</h6>
                                     </li>
                                     <li>
@@ -353,6 +350,9 @@
                                     </li>
                                     <li>
                                         <h6>Technical Analysis and Design</h6>
+                                    </li>
+                                    <li>
+                                        <h6>Java/J2EE based Enterprise Applications</h6>
                                     </li>
                                 </ul>
                             </section>
@@ -364,13 +364,13 @@
                                 </div>
                                 <ul class="minimal">
                                     <li>
-                                        <h6>Java</h6>
-                                    </li>
-                                    <li>
-                                        <h6>SQL</h6>
+                                        <h6>Javascript</h6>
                                     </li>
                                     <li>
                                         <h6>Ruby</h6>
+                                    </li>
+                                    <li>
+                                        <h6>SQL</h6>
                                     </li>
                                     <li>
                                         <h6>R</h6>
@@ -424,13 +424,13 @@
                                         <h6>Docker</h6>
                                     </li>
                                     <li>
+                                        <h6>Webpack</h6>
+                                    </li>
+                                    <li>
                                         <h6>Jenkins</h6>
                                     </li>
                                     <li>
                                         <h6>Gradle</h6>
-                                    </li>
-                                    <li>
-                                        <h6>Ant</h6>
                                     </li>
                                 </ul>
                             </section>
@@ -519,26 +519,31 @@
 
                             <ul>
                                 <li><a href="https://navirlabs.com/quick_send/"><strong>Quick Send</strong></a> –
-                                    Developed a react native cross-platform application for iPhone and Android
-                                    to send predefined messages, Good morning, Good night quotes in a flash.</li>
+                                    Developed a react native cross-platform application with Node.js/express
+                                    backend for iPhone and Android to send predefined messages, Good morning,
+                                    Good night quotes in a flash.</li>
                                 <li><a href="http://bit.ly/2NZY35f"><strong>Tamil Memes</strong></a> – Developed
-                                    a react native cross-platform application for iPhone and Android to View
-                                    and Share Latest Tamil memes.</li>
+                                    a react native cross-platform application with Node.js/express backend
+                                    for iPhone and Android to View and Share Latest Tamil memes.</li>
                                 <li><a href="https://goo.gl/h9wmvH"><strong>Tamil Radio</strong></a> – Developed
                                     a native android application which works seamlessly across Android mobile,
                                     tablet, Android TV, Chromecast, Android wearable devices.</li>
                                 <li><a href="https://radio.kanna.in"><strong>Desi Radios PWA</strong></a> –
-                                    Developed a responsive PWA application which works seamlessly across Android,
+                                    Developed a responsive PWA web application with Node.js/express/graphQL
+                                    backend for listening to online radios that works seamlessly across Android,
                                     iPhone, desktops, and tablets.</li>
                                 <li><a href="https://tnea.herokuapp.com/"><strong>TNEA</strong></a> - Developed
-                                    a responsive website which helps Indian engineering students choose the
-                                    right engineering stream based on their cutoff. Site Ranks colleges and
-                                    majors according to previous year’s minimum cutoff for each college and
-                                    major which is not offered by any other sites.</li>
+                                    a responsive web application with jQuery frontend and Node.js/express backend
+                                    which helps Indian engineering students choose the right engineering stream
+                                    based on their cutoff. Site Ranks colleges and majors according to previous
+                                    year’s minimum cutoff for each college and major which is not offered by
+                                    any other sites.</li>
                                 <li><a href="https://paadal.herokuapp.com/"><strong>Paadal</strong></a> - Developed
-                                    a responsive website which indexes Tamil songs from YouTube and provides
-                                    the ability to play songs based on the artist, actor, music director or
-                                    combination of all.</li>
+                                    a responsive web application with jQuery frontend and Node.js/express backend
+                                    which indexes Tamil songs from YouTube and provides the ability to play
+                                    songs based on the artist, actor, music director or combination of all.</li>
+                                <li><strong>Deployment</strong> - Most of the projects are deployed on digital
+                                    ocean instance with nginx and others are deployed on Heroku</li>
                             </ul>
                         </section>
                         <section class="item">
@@ -582,6 +587,8 @@
                                     Mentorhq.com as project manager as well as full stack developer working
                                     on their FFmpeg based Video merging Node.JS platform and Customer Retention
                                     Platform, Judge education platforms with React frontend and Rails backend</li>
+                                <li>Delivered HIPAA compliant React.js/Redux front-end for a YC funded healthcare
+                                    startup.</li>
                             </ul>
                         </section>
                         <section class="item">
