:pencil2: Added Open graph meta tags

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
 -->
 <html>
 	<head>
-		<title>Rajesh Kanna</title>
+		<title>Rajesh Kanna | Founder at Navir Labs</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta property="og:title" content="Rajesh Kanna | Founder at Navir Labs" />
+		<meta property="og:description" content="Software Product Visionary | Maker | Tech Evangelist Founder" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.kanna.in/" />
+		<meta property="og:image" content="https://www.gravatar.com/avatar/0cb00053c497c00e4a3ca2c5cf1e11e6" />
+		<meta name="twitter:card" content="summary" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
