--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="https://github.com/vrajeshkanna" class="fa-github">Github</a></li>
-								<li><a href="https://www.linkedin.com/in/rajesh-kanna-bb339a23/" class="fa-linkedin">Linkedin</a></li>
-								<li><a href="https://play.google.com/store/apps/developer?id=Navir+Labs" class="fa-android">Play Store</a></li>
-								<li><a href="https://itunes.apple.com/us/developer/rajesh-kanna/id1457034088" class="fa-apple">iOS Apps</a></li>
-								<li><a href="https://api.whatsapp.com/send?phone=919894179312" class="fa-whatsapp">Whatsapp</a></li>
 								<li><a href="https://twitter.com/vrajeshkanna1" class="fa-twitter">Twitter</a></li>
+								<li><a href="https://play.google.com/store/apps/developer?id=Navir+Labs" class="fa-android">Play Store</a></li>
+								<li><a href="https://www.linkedin.com/in/rajesh-kanna-bb339a23/" class="fa-linkedin">Linkedin</a></li>
+								<li><a href="https://medium.com/@v.rajeshkanna" class="fa-medium">My blog</a></li>
+								<li><a href="https://api.whatsapp.com/send?phone=919894179312" class="fa-whatsapp">Whatsapp</a></li>
 								<li><a href="https://www.instagram.com/v.rajeshkanna/" class="fa-instagram">Instagram</a></li>
 								<li><a href="https://www.facebook.com/v.rajeshkanna" class="fa-facebook">Facebook</a></li>
 							</ul>
