📝 Update resume with current projects

--- a/resume.html
+++ b/resume.html
@@ -281,11 +281,11 @@
                 <div class="profile-header pull-left">
                      <h1>RajeshKanna</h1>
 
-                     <h2>Full Stack Devloper</h2>
+                     <h2>Entrepreneur | Full Stack Devloper</h2>
 
                 </div>
                 <div class="profile-pic pull-right">
-                    <img src="https://www.gravatar.com/avatar/0cb00053c497c00e4a3ca2c5cf1e11e6" alt="profile-pic"/>
+                    <img src="https://www.gravatar.com/avatar/0cb00053c497c00e4a3ca2c5cf1e11e6" alt="profile-pic">
                 </div>
             </header>
             <div class="resume-content">
@@ -295,6 +295,11 @@
                              <h3>About</h3>
 
                             <div class="keyline"></div>
+                        </div>
+                        <div class="info-tag-container"> <i class="fa fa-map-marker"></i>
+
+                             <h6 class="info-text">B1 # 311, ARK Serene County<br/>Bengaluru Karnataka 560067</h6>
+
                         </div>
                         <div class="info-tag-container"> <i class="fa fa-envelope-o"></i>
 
@@ -379,24 +384,6 @@
                             </section>
                             <section class="container">
                                 <div class="title">
-                                     <h3>Java Frameworks</h3>
-
-                                    <div class="keyline"></div>
-                                </div>
-                                <ul class="minimal">
-                                    <li>
-                                        <h6>J2EE</h6>
-                                    </li>
-                                    <li>
-                                        <h6>Spring</h6>
-                                    </li>
-                                    <li>
-                                        <h6>Hibernate</h6>
-                                    </li>
-                                </ul>
-                            </section>
-                            <section class="container">
-                                <div class="title">
                                      <h3>Web Development</h3>
 
                                     <div class="keyline"></div>
@@ -431,6 +418,24 @@
                                     </li>
                                     <li>
                                         <h6>Gradle</h6>
+                                    </li>
+                                </ul>
+                            </section>
+                            <section class="container">
+                                <div class="title">
+                                     <h3>Java Frameworks</h3>
+
+                                    <div class="keyline"></div>
+                                </div>
+                                <ul class="minimal">
+                                    <li>
+                                        <h6>J2EE</h6>
+                                    </li>
+                                    <li>
+                                        <h6>Spring</h6>
+                                    </li>
+                                    <li>
+                                        <h6>Hibernate</h6>
                                     </li>
                                 </ul>
                             </section>
@@ -504,6 +509,28 @@
                         <section class="item">
                             <div class="section-header clearfix">
                                  <h3 class="bold pull-left">
+					                        <a href="https://www.taskrabbit.com/" target="_blank">
+					                            TaskRabbit thru Toptal <i class="fa fa-external-link" aria-hidden="true"></i>
+					                        </a>
+					                </h3>
+
+                                 <h5 class="italic pull-right">
+					                        <span class="startDate">09/2019</span>
+					                        <span class="endDate"> - Present</span>
+					                </h5>
+
+                            </div>
+                             <h4>Senior React Native Developer, Full stack developer</h4>
+
+                            <ul>
+                                <li><a href="https://apps.apple.com/us/app/taskrabbit-handyman-errands/id374165361"><strong>TaskRabbit</strong></a> –
+                                    Developing and enhancing react native cross-platform application with Rails
+                                    backend for Taskrabbit. Also worked on the web front end based on React/Redux.</li>
+                            </ul>
+                        </section>
+                        <section class="item">
+                            <div class="section-header clearfix">
+                                 <h3 class="bold pull-left">
 					                        <a href="https://navirlabs.com" target="_blank">
 					                            Navir Labs <i class="fa fa-external-link" aria-hidden="true"></i>
 					                        </a>
@@ -518,6 +545,10 @@
                              <h4>Founder, Full stack developer</h4>
 
                             <ul>
+                                <li><a href="https://navirlabs.com/"><strong>School List</strong></a> – Developing
+                                    a web application with React/Redux frontend and Rails Backend for Indian
+                                    parents to pick right schools for their kids based on 10+ factors like
+                                    proximity, affordibility, quality etc...</li>
                                 <li><a href="https://navirlabs.com/quick_send/"><strong>Quick Send</strong></a> –
                                     Developed a react native cross-platform application with Node.js/express
                                     backend for iPhone and Android to send predefined messages, Good morning,
