Spring clean - remove links

--- a/resume.html
+++ b/resume.html
@@ -553,23 +553,23 @@
                                     Developed a react native cross-platform application with Node.js/express
                                     backend for iPhone and Android to send predefined messages, Good morning,
                                     Good night quotes in a flash.</li>
-                                <li><a href="http://bit.ly/2NZY35f"><strong>Tamil Memes</strong></a> – Developed
+                                <li><strong>Tamil Memes</strong> – Developed
                                     a react native cross-platform application with Node.js/express backend
                                     for iPhone and Android to View and Share Latest Tamil memes.</li>
-                                <li><a href="https://goo.gl/h9wmvH"><strong>Tamil Radio</strong></a> – Developed
+                                <li><strong>Tamil Radio</strong> – Developed
                                     a native android application which works seamlessly across Android mobile,
                                     tablet, Android TV, Chromecast, Android wearable devices.</li>
                                 <li><a href="https://radio.kanna.in"><strong>Desi Radios PWA</strong></a> –
                                     Developed a responsive PWA web application with Node.js/express/graphQL
                                     backend for listening to online radios that works seamlessly across Android,
                                     iPhone, desktops, and tablets.</li>
-                                <li><a href="https://tnea.herokuapp.com/"><strong>TNEA</strong></a> - Developed
+                                <li><strong>TNEA</strong> - Developed
                                     a responsive web application with jQuery frontend and Node.js/express backend
                                     which helps Indian engineering students choose the right engineering stream
                                     based on their cutoff. Site Ranks colleges and majors according to previous
                                     year’s minimum cutoff for each college and major which is not offered by
                                     any other sites.</li>
-                                <li><a href="https://paadal.herokuapp.com/"><strong>Paadal</strong></a> - Developed
+                                <li><strong>Paadal</strong> - Developed
                                     a responsive web application with jQuery frontend and Node.js/express backend
                                     which indexes Tamil songs from YouTube and provides the ability to play
                                     songs based on the artist, actor, music director or combination of all.</li>
