--- a/playlist/index.html
+++ b/playlist/index.html
@@ -70,6 +70,15 @@
     <section class="section">
       <div class="container">
         <h1 class="title">My Favorite playlists</h1>
+        <h3 class="title is-3 mt-3">Saavn sample</h3>
+        <iframe
+          allow="encrypted-media"
+          allowtransparency="true"
+          frameborder="0"
+          height="400"
+          src="https://www.jiosaavn.com/embed/playlist/2574965"
+          width="100%"
+        ></iframe>
         <h3 class="title is-3 mt-3">Latest Songs</h3>
         <iframe
           height="315"
@@ -91,9 +100,14 @@
           width="100%"
         ></iframe>
         <h3 class="title is-3 mt-3">Spotify sample</h3>
-        <iframe allow="encrypted-media" allowtransparency="true" frameborder="0" height="232" src="https://open.spotify.com/embed/playlist/6ZqKAo7ECLlFSwOX278S8V" width="100%"></iframe>
-        <h3 class="title is-3 mt-3">Saavn sample</h3>
-        <iframe allow="encrypted-media" allowtransparency="true" frameborder="0" height="400" src="https://www.jiosaavn.com/embed/playlist/2574965" width="100%"></iframe>
+        <iframe
+          allow="encrypted-media"
+          allowtransparency="true"
+          frameborder="0"
+          height="232"
+          src="https://open.spotify.com/embed/playlist/6ZqKAo7ECLlFSwOX278S8V"
+          width="100%"
+        ></iframe>
       </div>
     </section>
     <script defer src="sw.js"></script>
