--- a/playlist/index.html
+++ b/playlist/index.html
@@ -79,7 +79,7 @@
           src="https://www.jiosaavn.com/embed/playlist/2574965"
           width="100%"
         ></iframe>
-        <h3 class="title is-3 mt-3">Latest Songs</h3>
+        <h3 class="title is-3 mt-3">Trending Songs</h3>
         <iframe
           height="315"
           src="https://www.youtube.com/embed/videoseries?list=PLqQlj8XqiTrWcyDRfCWKm_P90rgoSTgyd"
@@ -89,7 +89,7 @@
           allowfullscreen
           width="100%"
         ></iframe>
-        <h3 class="title is-3 mt-3">Latest Trailers</h3>
+        <h3 class="title is-3 mt-3">Trending Trailers</h3>
         <iframe
           height="315"
           src="https://www.youtube.com/embed/videoseries?list=PLqQlj8XqiTrW5pqIpQZrPWIElqlhKoq_3"
