--- a/playlist/index.html
+++ b/playlist/index.html
@@ -69,8 +69,8 @@
   <body>
     <section class="section">
       <div class="container">
-        <h1 class="title">My Favorite playlists</h1>
-        <h3 class="title is-3 mt-3">Saavn sample</h3>
+        <h1 class="title is-1">My Playlists</h1>
+        <h3 class="title is-3 mt-6">Tamil Top Songs</h3>
         <iframe
           allow="encrypted-media"
           allowtransparency="true"
@@ -79,7 +79,16 @@
           src="https://www.jiosaavn.com/embed/playlist/2574965"
           width="100%"
         ></iframe>
-        <h3 class="title is-3 mt-3">Trending Songs</h3>
+        <h3 class="title is-3 mt-6">Coding Playlist</h3>
+        <iframe
+          allow="encrypted-media"
+          allowtransparency="true"
+          frameborder="0"
+          height="232"
+          src="https://open.spotify.com/embed/playlist/6ZqKAo7ECLlFSwOX278S8V"
+          width="100%"
+        ></iframe>
+        <h3 class="title is-3 mt-6">Trending Songs</h3>
         <iframe
           height="315"
           src="https://www.youtube.com/embed/videoseries?list=PLqQlj8XqiTrWcyDRfCWKm_P90rgoSTgyd"
@@ -89,7 +98,7 @@
           allowfullscreen
           width="100%"
         ></iframe>
-        <h3 class="title is-3 mt-3">Trending Trailers</h3>
+        <h3 class="title is-3 mt-6">Trending Trailers</h3>
         <iframe
           height="315"
           src="https://www.youtube.com/embed/videoseries?list=PLqQlj8XqiTrW5pqIpQZrPWIElqlhKoq_3"
@@ -97,15 +106,6 @@
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
-          width="100%"
-        ></iframe>
-        <h3 class="title is-3 mt-3">Spotify sample</h3>
-        <iframe
-          allow="encrypted-media"
-          allowtransparency="true"
-          frameborder="0"
-          height="232"
-          src="https://open.spotify.com/embed/playlist/6ZqKAo7ECLlFSwOX278S8V"
           width="100%"
         ></iframe>
       </div>
